[gd_scene load_steps=39 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Players/player/idle/player-idle-1.png" type="Texture" id=2]
[ext_resource path="res://Players/player/idle/player-idle-2.png" type="Texture" id=3]
[ext_resource path="res://Players/player/idle/player-idle-3.png" type="Texture" id=4]
[ext_resource path="res://Players/player/idle/player-idle-4.png" type="Texture" id=5]
[ext_resource path="res://Players/player/idle/player-idle-5.png" type="Texture" id=6]
[ext_resource path="res://Players/player/idle/player-idle-6.png" type="Texture" id=7]
[ext_resource path="res://Players/player/idle/player-idle-7.png" type="Texture" id=8]
[ext_resource path="res://Players/player/idle/player-idle-8.png" type="Texture" id=9]
[ext_resource path="res://Players/player/run/player-run-1.png" type="Texture" id=10]
[ext_resource path="res://Players/player/run/player-run-2.png" type="Texture" id=11]
[ext_resource path="res://Players/player/run/player-run-3.png" type="Texture" id=12]
[ext_resource path="res://Players/player/run/player-run-4.png" type="Texture" id=13]
[ext_resource path="res://Players/player/run/player-run-5.png" type="Texture" id=14]
[ext_resource path="res://Players/player/run/player-run-6.png" type="Texture" id=15]
[ext_resource path="res://Players/player/crouch/player-crouch-1.png" type="Texture" id=16]
[ext_resource path="res://Players/player/crouch/player-crouch-2.png" type="Texture" id=17]
[ext_resource path="res://Players/player/jump/player-jump-1.png" type="Texture" id=18]
[ext_resource path="res://Players/player/jump/player-jump-2.png" type="Texture" id=19]
[ext_resource path="res://Players/player/jump/player-jump-3.png" type="Texture" id=20]
[ext_resource path="res://Players/player/jump/player-jump-4.png" type="Texture" id=21]
[ext_resource path="res://Players/player/hurt/player-hurt-1.png" type="Texture" id=22]
[ext_resource path="res://Players/player/hurt/player-hurt-2.png" type="Texture" id=23]
[ext_resource path="res://UI/vidas.png" type="Texture" id=24]
[ext_resource path="res://heart.png" type="Texture" id=25]
[ext_resource path="res://background.png" type="Texture" id=26]
[ext_resource path="res://Botones/Izquierda.png" type="Texture" id=27]
[ext_resource path="res://Botones/Derecha.png" type="Texture" id=28]
[ext_resource path="res://Botones/Saltar.png" type="Texture" id=29]
[ext_resource path="res://Botones/Ataque.png" type="Texture" id=30]
[ext_resource path="res://Botones/Abajo.png" type="Texture" id=31]
[ext_resource path="res://flatLight36.png" type="Texture" id=32]
[ext_resource path="res://Texto/Fuente.tres" type="DynamicFont" id=33]
[ext_resource path="res://Musica/Salto.wav" type="AudioStream" id=34]
[ext_resource path="res://Musica/Pasos.wav" type="AudioStream" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Agachado",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 18.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "Jump",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.43385, 12.6104 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "Vida",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "NoVida",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 49.8533, 43.2202 )
scale = Vector2( 0.965941, 1 )
z_index = 1
script = ExtResource( 1 )
Speed = 90
gravity = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.87417, 6.29051 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
offset = Vector2( 360, 155 )
scale = Vector2( 3.5, 3.5 )
transform = Transform2D( 3.5, 0, 0, 3.5, 360, 155 )

[node name="vidas" type="Sprite" parent="Camera2D/CanvasLayer"]
position = Vector2( -46.1095, -29.0283 )
scale = Vector2( 0.289782, 0.3 )
texture = ExtResource( 24 )

[node name="Vida" type="AnimatedSprite" parent="Camera2D/CanvasLayer/vidas"]
position = Vector2( -57.1066, 26.2376 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 3 )
animation = "Vida"

[node name="Vida2" type="AnimatedSprite" parent="Camera2D/CanvasLayer/vidas"]
position = Vector2( -15.1491, 26.2376 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 3 )
animation = "Vida"

[node name="Vida3" type="AnimatedSprite" parent="Camera2D/CanvasLayer/vidas"]
position = Vector2( 28.2034, 26.2376 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 3 )
animation = "Vida"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -93.8439, 86.4953 )
scale = Vector2( 0.289782, 0.3 )
normal = ExtResource( 27 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -36.3649, 85.8966 )
scale = Vector2( 0.289782, 0.3 )
normal = ExtResource( 28 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 158.485, 85.9951 )
scale = Vector2( 0.289782, 0.3 )
normal = ExtResource( 29 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 159.273, 38.4729 )
scale = Vector2( 0.289782, 0.3 )
normal = ExtResource( 30 )

[node name="TouchScreenButton6" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 113.273, 86.4729 )
scale = Vector2( 0.289782, 0.3 )
normal = ExtResource( 31 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="Camera2D/CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -103.145, -48.0203 )
scale = Vector2( 3.82176, 2.282 )
normal = ExtResource( 32 )

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/CanvasLayer"]
modulate = Color( 0.964706, 0.784314, 0.156863, 1 )
margin_left = -58.6055
margin_top = -40.8094
margin_right = 73.3946
margin_bottom = -10.8094
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 33 )
text = "99 : 99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Municiones" type="Label" parent="Camera2D/CanvasLayer" groups=[
"Municiones",
]]
anchor_left = -0.024
anchor_top = -0.072
anchor_right = -0.024
anchor_bottom = -0.072
margin_left = -0.424
margin_top = 0.200001
margin_right = 28.576
margin_bottom = 14.2
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 25.5, 5.647 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Salto" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1.11881, 7.56505 )
stream = ExtResource( 34 )
bus = "Salto"

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.3

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.8

[node name="Timer5" type="Timer" parent="."]
wait_time = 6.0

[node name="Timer6" type="Timer" parent="."]
wait_time = 0.6

[node name="Pasos" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 35 )
bus = "Pasos"
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Camera2D/CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="released" from="Camera2D/CanvasLayer/TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="released" from="Camera2D/CanvasLayer/TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton4" to="." method="_on_TouchScreenButton4_pressed"]
[connection signal="released" from="Camera2D/CanvasLayer/TouchScreenButton4" to="." method="_on_TouchScreenButton4_released"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton6" to="." method="_on_TouchScreenButton6_pressed"]
[connection signal="released" from="Camera2D/CanvasLayer/TouchScreenButton6" to="." method="_on_TouchScreenButton6_released"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TouchScreenButton5" to="." method="_on_TouchScreenButton5_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="finished" from="Pasos" to="." method="_on_Pasos_finished"]
